---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B901 Using `yield` and `return {value}` in a generator function can lead to confusing behavior
 --> B901.py:9:9
  |
9 |         return [1, 2, 3]
  |         ^^^^^^^^^^^^^^^^
  |

B901 Using `yield` and `return {value}` in a generator function can lead to confusing behavior
  --> B901.py:36:5
   |
36 |     return [3, 2, 1]
   |     ^^^^^^^^^^^^^^^^
   |

B901 Using `yield` and `return {value}` in a generator function can lead to confusing behavior
  --> B901.py:56:5
   |
56 |     return (yield from [])
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |

B901 Using `yield` and `return {value}` in a generator function can lead to confusing behavior
  --> B901.py:61:5
   |
61 |     return x
   |     ^^^^^^^^
   |

B901 Using `yield` and `return {value}` in a generator function can lead to confusing behavior
  --> B901.py:72:5
   |
72 |     return x
   |     ^^^^^^^^
   |

B901 Using `yield` and `return {value}` in a generator function can lead to confusing behavior
  --> B901.py:83:5
   |
83 |     return foo()
   |     ^^^^^^^^^^^^
   |

B901 Using `yield` and `return {value}` in a generator function can lead to confusing behavior
  --> B901.py:88:5
   |
88 |     return [1, 2, 3]
   |     ^^^^^^^^^^^^^^^^
   |

B901 Using `yield` and `return {value}` in a generator function can lead to confusing behavior
   --> B901.py:116:5
    |
116 |     return "should error"
    |     ^^^^^^^^^^^^^^^^^^^^^
    |

B901 Using `yield` and `return {value}` in a generator function can lead to confusing behavior
   --> B901.py:122:5
    |
122 |     return "should error"
    |     ^^^^^^^^^^^^^^^^^^^^^
    |

B901 Using `yield` and `return {value}` in a generator function can lead to confusing behavior
   --> B901.py:128:5
    |
128 |     return "should error"
    |     ^^^^^^^^^^^^^^^^^^^^^
    |
